feat: Complete video processing pipeline with Silero VAD, Whisper, and LLM retake analysis
- Add Silero VAD-based silence removal (workers/media/utils/vad_processor.py)
- Add local Whisper transcription (workers/media/utils/transcription.py)
- Add LLM-based retake marker analysis (workers/media/utils/llm_cuts.py)
- Add intro transition placeholder (workers/media/utils/intro_transition.py)
- Rewrite video_process handler with complete pipeline
- Update VideoPlayer component with dual video tabs (raw + processed)
- Update project page to display both videos
- Simplify requirements.txt (remove moviepy, faster-whisper)
- Add setup.sh automated installation script
- Add comprehensive documentation (README, QUICK_START, IMPLEMENTATION_SUMMARY, START_HERE, ENV_SETUP)

Features:
- Neural network-based silence detection (more accurate than WebRTC VAD)
- Word-level transcription with no file size limits
- GPT-4 analyzes 'cut cut' phrases for intelligent cuts
- Dual video display in UI (tabs for original/processed)
- Comprehensive edit reports with statistics
- Simplified dependencies for easier installation

--- a/workers/media/requirements.txt
+++ b/workers/media/requirements.txt
@@ -4,8 +4,7 @@
 psycopg2-binary==2.9.9
 supabase==2.9.1
 
-# Video Processing
-moviepy==1.0.3
+# Video Processing (using ffmpeg directly via subprocess - moviepy not needed)
 ffmpeg-python==0.2.0
 
 # Audio Analysis
@@ -17,9 +16,8 @@ librosa==0.10.1
 torch==2.1.2
 torchaudio==2.1.2
 
-# Transcription
+# Transcription (using openai-whisper only - simpler, no native deps)
 openai-whisper==20231117
-faster-whisper==1.0.0
 
 # LLM for retake analysis
 openai==1.12.0
