chore: Update .gitignore, enhance docker-compose.yml, and refine environment setup
- Added various entries to .gitignore to exclude dependencies, environment files, OS files, IDE configurations, and temporary files.
- Enhanced docker-compose.yml to include additional environment variables for services and improved health checks.
- Refined ENV_SETUP.md and START_HERE.md for clearer instructions on setting up environment files and running the application.
- Minor updates to several API routes and components for better functionality and error handling.
- Removed QUICK_START.md as it was redundant with the new documentation structure.

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,29 @@
+# Dependencies
 node_modules
+__pycache__
+*.pyc
+.Python
+venv/
+env/
+
+# Environment files
+.env
+.env.local
+.env*.local
+
+# OS files
+.DS_Store
+*.log
+
+# IDE
+.vscode/
+.idea/
+
+# Build outputs
+.next/
+dist/
+build/
+
+# Temp files
+*.tmp
+.tmp/
