--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,25 +12,25 @@ services:
     ports:
       - "3000:3000"
     environment:
-      - NODE_ENV=production
-      - NEXT_TELEMETRY_DISABLED=1
+      NODE_ENV: production
+      NEXT_TELEMETRY_DISABLED: "1"
       # Pass-through required runtime env vars from Coolify
-      - NEXT_PUBLIC_SUPABASE_URL
-      - NEXT_PUBLIC_SUPABASE_ANON_KEY
-      - SUPABASE_SERVICE_ROLE_KEY
-      - DATABASE_URL
+      NEXT_PUBLIC_SUPABASE_URL: ${NEXT_PUBLIC_SUPABASE_URL}
+      NEXT_PUBLIC_SUPABASE_ANON_KEY: ${NEXT_PUBLIC_SUPABASE_ANON_KEY}
+      SUPABASE_SERVICE_ROLE_KEY: ${SUPABASE_SERVICE_ROLE_KEY}
+      DATABASE_URL: ${DATABASE_URL}
       # Optional integrations (only needed if you use the features)
-      - OPENAI_API_KEY
-      - OPENAI_MODEL_DEFAULT
-      - OPENAI_MODEL_FAST
-      - DATAFORSEO_LOGIN
-      - DATAFORSEO_PASSWORD
-      - GOOGLE_AI_STUDIO_API_KEY
-      - NANO_BANANA_MODEL
-      - NANO_BANANA_ENDPOINT
-      - WORKER_SHARED_SECRET
-      - WORKER_POLL_INTERVAL
-      - WORKER_TEMP_DIR
+      OPENAI_API_KEY: ${OPENAI_API_KEY:-}
+      OPENAI_MODEL_DEFAULT: ${OPENAI_MODEL_DEFAULT:-}
+      OPENAI_MODEL_FAST: ${OPENAI_MODEL_FAST:-}
+      DATAFORSEO_LOGIN: ${DATAFORSEO_LOGIN:-}
+      DATAFORSEO_PASSWORD: ${DATAFORSEO_PASSWORD:-}
+      GOOGLE_AI_STUDIO_API_KEY: ${GOOGLE_AI_STUDIO_API_KEY:-}
+      NANO_BANANA_MODEL: ${NANO_BANANA_MODEL:-}
+      NANO_BANANA_ENDPOINT: ${NANO_BANANA_ENDPOINT:-}
+      WORKER_SHARED_SECRET: ${WORKER_SHARED_SECRET:-}
+      WORKER_POLL_INTERVAL: ${WORKER_POLL_INTERVAL:-}
+      WORKER_TEMP_DIR: ${WORKER_TEMP_DIR:-}
     depends_on:
       - worker
     restart: unless-stopped
@@ -46,17 +46,17 @@ services:
       context: .
       dockerfile: workers/media/Dockerfile
     environment:
-      - PYTHONUNBUFFERED=1
+      PYTHONUNBUFFERED: "1"
       # Pass-through required runtime env vars from Coolify
-      - DATABASE_URL
-      - NEXT_PUBLIC_SUPABASE_URL
-      - SUPABASE_SERVICE_ROLE_KEY
+      DATABASE_URL: ${DATABASE_URL}
+      NEXT_PUBLIC_SUPABASE_URL: ${NEXT_PUBLIC_SUPABASE_URL}
+      SUPABASE_SERVICE_ROLE_KEY: ${SUPABASE_SERVICE_ROLE_KEY}
       # Optional
-      - OPENAI_API_KEY
-      - WORKER_SHARED_SECRET
-      - WORKER_POLL_INTERVAL
-      - WORKER_TEMP_DIR
-      - WHISPER_MODEL
+      OPENAI_API_KEY: ${OPENAI_API_KEY:-}
+      WORKER_SHARED_SECRET: ${WORKER_SHARED_SECRET:-}
+      WORKER_POLL_INTERVAL: ${WORKER_POLL_INTERVAL:-}
+      WORKER_TEMP_DIR: ${WORKER_TEMP_DIR:-}
+      WHISPER_MODEL: ${WHISPER_MODEL:-}
     volumes:
       - worker-temp:/tmp/yt-worker
     restart: unless-stopped
@@ -71,16 +71,16 @@ services:
       context: .
       dockerfile: workers/search-processor/Dockerfile
     environment:
-      - NODE_ENV=production
+      NODE_ENV: production
       # Pass-through required runtime env vars from Coolify
-      - NEXT_PUBLIC_SUPABASE_URL
-      - SUPABASE_SERVICE_ROLE_KEY
+      NEXT_PUBLIC_SUPABASE_URL: ${NEXT_PUBLIC_SUPABASE_URL}
+      SUPABASE_SERVICE_ROLE_KEY: ${SUPABASE_SERVICE_ROLE_KEY}
       # Optional integrations used by search tools
-      - OPENAI_API_KEY
-      - OPENAI_MODEL_DEFAULT
-      - OPENAI_MODEL_FAST
-      - DATAFORSEO_LOGIN
-      - DATAFORSEO_PASSWORD
+      OPENAI_API_KEY: ${OPENAI_API_KEY:-}
+      OPENAI_MODEL_DEFAULT: ${OPENAI_MODEL_DEFAULT:-}
+      OPENAI_MODEL_FAST: ${OPENAI_MODEL_FAST:-}
+      DATAFORSEO_LOGIN: ${DATAFORSEO_LOGIN:-}
+      DATAFORSEO_PASSWORD: ${DATAFORSEO_PASSWORD:-}
     restart: unless-stopped
     healthcheck:
       test: ["CMD-SHELL", "ps | grep -q '[t]sx worker.ts'"]
@@ -97,7 +97,7 @@ services:
     command: npm run db:migrate
     working_dir: /app
     environment:
-      - DATABASE_URL
+      DATABASE_URL: ${DATABASE_URL}
     restart: "no"
     profiles:
       - migration
