--- a/.env.example
+++ b/.env.example
@@ -1,59 +1,94 @@
-# YouTube Production Assistant - Environment Variables
-# Copy this file to .env.local and fill in your values
+# ==========================================
+# Production Environment Variables (Coolify)
+# ==========================================
+#
+# Notes:
+# - Coolify typically injects SERVICE_* variables automatically.
+# - Secret keys do not need to exist at *build time* (Next build) anymore,
+#   but they ARE still required at runtime for the related features.
+#
 
-# =============================================================================
-# SUPABASE
-# =============================================================================
-# Your Supabase project URL
+# --- Coolify service URLs (usually auto-injected) ---
+SERVICE_FQDN_MIGRATE=migrate.yourdomain.com
+SERVICE_FQDN_SEARCH_WORKER=search.yourdomain.com
+SERVICE_FQDN_WEB=yourdomain.com
+SERVICE_FQDN_WORKER=worker.yourdomain.com
+
+SERVICE_URL_MIGRATE=https://migrate.yourdomain.com
+SERVICE_URL_SEARCH_WORKER=https://search.yourdomain.com
+SERVICE_URL_WEB=https://yourdomain.com
+SERVICE_URL_WORKER=https://worker.yourdomain.com
+
+# --- Required: Supabase ---
 NEXT_PUBLIC_SUPABASE_URL=https://your-project.supabase.co
-
-# Supabase anonymous key (safe for client-side)
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key
-
-# Supabase service role key (server-side only, never expose to client)
 SUPABASE_SERVICE_ROLE_KEY=your-service-role-key
 
-# Direct PostgreSQL connection for migrations
-DATABASE_URL=postgresql://postgres:YOUR_PASSWORD@your-host:5432/postgres
+# --- Required for migrations / workers (direct DB) ---
+DATABASE_URL=postgresql://postgres:password@host:5432/postgres
 
-# =============================================================================
-# DATAFORSEO
-# =============================================================================
-# DataForSEO credentials for YouTube research
-DATAFORSEO_LOGIN=your-login
-DATAFORSEO_PASSWORD=your-password
-
-# =============================================================================
-# OPENAI
-# =============================================================================
-# OpenAI API key
+# --- Optional: OpenAI (outlines, titles, baseline summarization, etc.) ---
 OPENAI_API_KEY=sk-...
+OPENAI_MODEL_DEFAULT=gpt-4o
+OPENAI_MODEL_FAST=gpt-4o-mini
 
-# Default model for complex tasks (outlines, research)
-OPENAI_MODEL_DEFAULT=gpt-5.2
+# --- Optional: DataForSEO (channel import, outlier search, subtitles) ---
+DATAFORSEO_LOGIN=you@example.com
+DATAFORSEO_PASSWORD=your-dataforseo-password
 
-# Fast model for simpler tasks (titles, summaries)
-OPENAI_MODEL_FAST=gpt-5-mini
-
-# =============================================================================
-# GOOGLE AI STUDIO (Nano Banana Pro)
-# =============================================================================
-# Google AI Studio API key for thumbnail generation
-GOOGLE_AI_STUDIO_API_KEY=your-google-ai-key
-
-# Imagen model for thumbnail generation
-NANO_BANANA_MODEL=gemini-3-pro-image-preview
-
-# API endpoint
+# --- Optional: Google AI Studio (thumbnail generation) ---
+GOOGLE_AI_STUDIO_API_KEY=your-google-ai-studio-key
 NANO_BANANA_ENDPOINT=https://generativelanguage.googleapis.com/v1beta
+NANO_BANANA_MODEL=gemini-1.5-pro
 
-# =============================================================================
-# WORKER
-# =============================================================================
-# Shared secret for worker authentication
-WORKER_SHARED_SECRET=generate-a-secure-random-string
+# --- Worker controls ---
+# Shared secret should be a long random string (32+ chars). Example generation:
+#   openssl rand -hex 32
+WORKER_SHARED_SECRET=replace-with-secure-random-string
+WORKER_POLL_INTERVAL=5
+WORKER_TEMP_DIR=/tmp/yt-worker
+WHISPER_MODEL=base
 
-# Optional: Worker configuration
-# WORKER_POLL_INTERVAL=5
-# WORKER_TEMP_DIR=/tmp/yt-worker
-# WHISPER_MODEL=base
+
+# ==============================================
+# Preview Deployments Environment Variables (Coolify)
+# ==============================================
+#
+# Notes:
+# - Coolify preview deployments usually set SERVICE_FQDN_WEB / SERVICE_URL_WEB
+#   to a unique subdomain per preview (e.g. <hash>.yourdomain.com).
+# - You can generally reuse the same secrets as Production, or create separate ones.
+#
+
+# --- Coolify service URLs (preview) ---
+SERVICE_FQDN_MIGRATE=migrate.yourdomain.com
+SERVICE_FQDN_SEARCH_WORKER=search.yourdomain.com
+SERVICE_FQDN_WEB=preview-unique-subdomain.yourdomain.com
+SERVICE_FQDN_WORKER=worker.yourdomain.com
+
+SERVICE_URL_MIGRATE=https://migrate.yourdomain.com
+SERVICE_URL_SEARCH_WORKER=https://search.yourdomain.com
+SERVICE_URL_WEB=https://preview-unique-subdomain.yourdomain.com
+SERVICE_URL_WORKER=https://worker.yourdomain.com
+
+# --- App secrets/vars (preview) ---
+NEXT_PUBLIC_SUPABASE_URL=https://your-project.supabase.co
+NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key
+SUPABASE_SERVICE_ROLE_KEY=your-service-role-key
+DATABASE_URL=postgresql://postgres:password@host:5432/postgres
+
+OPENAI_API_KEY=sk-...
+OPENAI_MODEL_DEFAULT=gpt-4o
+OPENAI_MODEL_FAST=gpt-4o-mini
+
+DATAFORSEO_LOGIN=you@example.com
+DATAFORSEO_PASSWORD=your-dataforseo-password
+
+GOOGLE_AI_STUDIO_API_KEY=your-google-ai-studio-key
+NANO_BANANA_ENDPOINT=https://generativelanguage.googleapis.com/v1beta
+NANO_BANANA_MODEL=gemini-1.5-pro
+
+WORKER_SHARED_SECRET=replace-with-secure-random-string
+WORKER_POLL_INTERVAL=5
+WORKER_TEMP_DIR=/tmp/yt-worker
+WHISPER_MODEL=base
