--- a/workers/media/requirements.txt
+++ b/workers/media/requirements.txt
@@ -24,7 +24,7 @@ openai==1.12.0
 
 # Face/Pose Analysis
 mediapipe==0.10.9
-opencv-python==4.9.0.80
+opencv-python-headless==4.9.0.80
 numpy==1.26.3
 Pillow==10.2.0
 
@@ -34,4 +34,3 @@ requests==2.31.0
 
 # Utilities
 python-dotenv==1.0.0
-
