Fix worker images for search and remotion

--- a/.dockerignore
+++ b/.dockerignore
@@ -71,9 +71,10 @@ PRD.md
 
 # Templates and examples
 Initial Templates - */
+!Initial Templates - execution/video_effects/
+!Initial Templates - execution/video_effects/**
 
 # Docker
 docker-compose.yml
 Dockerfile*
 .dockerignore
-
