--- a/workers/search-processor/Dockerfile
+++ b/workers/search-processor/Dockerfile
@@ -8,13 +8,14 @@ WORKDIR /app/workers/search-processor
 RUN if [ -f package-lock.json ]; then npm ci; else npm install; fi
 
 # Copy worker source
-COPY workers/search-processor ./workers/search-processor/
+WORKDIR /app
+COPY workers/search-processor /app/workers/search-processor/
 
 # Copy the tool registry + handlers the worker imports at runtime
-COPY apps/web/src/lib ./apps/web/src/lib/
+COPY apps/web/src/lib /app/apps/web/src/lib/
 
 ENV NODE_ENV=production
 
+WORKDIR /app/workers/search-processor
 CMD ["npm", "start"]
-
 
