Update Dockerfile to install dependencies at root
Dependencies are now installed at the /app root to ensure both the worker and imported code from apps/web can access node_modules. This change improves compatibility when code traverses up the directory tree looking for dependencies.

--- a/workers/search-processor/Dockerfile
+++ b/workers/search-processor/Dockerfile
@@ -2,13 +2,12 @@ FROM node:20-alpine
 
 WORKDIR /app
 
-# Install dependencies for the worker itself (do not rely on other workspace packages)
-COPY workers/search-processor/package*.json ./workers/search-processor/
-WORKDIR /app/workers/search-processor
+# Install dependencies at root so they are accessible to both the worker
+# and the imported code from apps/web (which traverses up looking for node_modules)
+COPY workers/search-processor/package*.json ./
 RUN if [ -f package-lock.json ]; then npm ci; else npm install; fi
 
 # Copy worker source
-WORKDIR /app
 COPY workers/search-processor /app/workers/search-processor/
 
 # Copy the tool registry + handlers the worker imports at runtime
