Copy tsconfig.json to Docker image for search-processor
Adds the apps/web/tsconfig.json file to the Docker image for the search-processor worker. This may be required for runtime or build-time TypeScript configuration.

--- a/workers/search-processor/Dockerfile
+++ b/workers/search-processor/Dockerfile
@@ -12,6 +12,7 @@ COPY workers/search-processor /app/workers/search-processor/
 
 # Copy the tool registry + handlers the worker imports at runtime
 COPY apps/web/src/lib /app/apps/web/src/lib/
+COPY apps/web/tsconfig.json /app/apps/web/tsconfig.json
 
 ENV NODE_ENV=production
 
