Migrate retake detection to GPT-4.1 models
Updates all references, defaults, and constraints from GPT-4, GPT-4-turbo, and GPT-4o to the new GPT-4.1 and GPT-4.1-mini models for LLM-based retake detection. Adjusts documentation, UI, API, and database schema/migrations to reflect the new model family, and adds normalization logic for legacy model names in the backend.

--- a/.dockerignore
+++ b/.dockerignore
@@ -73,6 +73,7 @@ PRD.md
 Initial Templates - */
 !Initial Templates - execution/video_effects/
 !Initial Templates - execution/video_effects/**
+!Initial Templates - execution/pan_3d_transition.py
 
 # Docker
 docker-compose.yml
