Switch to GPT-5.2 and add YouTube description generation
Replaces all OpenAI model configuration and usage from GPT-4.1/4o to GPT-5.2, consolidating model environment variables to OPENAI_MODEL. Removes per-user LLM model selection from profile and related code. Adds an API route and UI for generating YouTube descriptions from transcripts using OpenAI, and updates documentation and handlers to reflect the new model and configuration.

--- a/.env.example
+++ b/.env.example
@@ -29,8 +29,7 @@ DATABASE_URL=postgresql://postgres:password@host:5432/postgres
 
 # --- Optional: OpenAI (outlines, titles, baseline summarization, etc.) ---
 OPENAI_API_KEY=sk-...
-OPENAI_MODEL_DEFAULT=gpt-4o
-OPENAI_MODEL_FAST=gpt-4o-mini
+OPENAI_MODEL=gpt-5.2
 
 # --- Optional: DataForSEO (channel import, outlier search, subtitles) ---
 DATAFORSEO_LOGIN=you@example.com
@@ -78,8 +77,7 @@ SUPABASE_SERVICE_ROLE_KEY=your-service-role-key
 DATABASE_URL=postgresql://postgres:password@host:5432/postgres
 
 OPENAI_API_KEY=sk-...
-OPENAI_MODEL_DEFAULT=gpt-4o
-OPENAI_MODEL_FAST=gpt-4o-mini
+OPENAI_MODEL=gpt-5.2
 
 DATAFORSEO_LOGIN=you@example.com
 DATAFORSEO_PASSWORD=your-dataforseo-password
