--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,8 +21,7 @@ services:
       DATABASE_URL: ${DATABASE_URL}
       # Optional integrations (only needed if you use the features)
       OPENAI_API_KEY: ${OPENAI_API_KEY:-}
-      OPENAI_MODEL_DEFAULT: ${OPENAI_MODEL_DEFAULT:-}
-      OPENAI_MODEL_FAST: ${OPENAI_MODEL_FAST:-}
+      OPENAI_MODEL: ${OPENAI_MODEL:-}
       DATAFORSEO_LOGIN: ${DATAFORSEO_LOGIN:-}
       DATAFORSEO_PASSWORD: ${DATAFORSEO_PASSWORD:-}
       GOOGLE_AI_STUDIO_API_KEY: ${GOOGLE_AI_STUDIO_API_KEY:-}
@@ -77,8 +76,7 @@ services:
       SUPABASE_SERVICE_ROLE_KEY: ${SUPABASE_SERVICE_ROLE_KEY}
       # Optional integrations used by search tools
       OPENAI_API_KEY: ${OPENAI_API_KEY:-}
-      OPENAI_MODEL_DEFAULT: ${OPENAI_MODEL_DEFAULT:-}
-      OPENAI_MODEL_FAST: ${OPENAI_MODEL_FAST:-}
+      OPENAI_MODEL: ${OPENAI_MODEL:-}
       DATAFORSEO_LOGIN: ${DATAFORSEO_LOGIN:-}
       DATAFORSEO_PASSWORD: ${DATAFORSEO_PASSWORD:-}
     restart: unless-stopped
