Refactor worker to use Supabase RPC for job management
Replaces direct PostgreSQL access with Supabase RPCs for claiming, completing, and failing jobs. Adds new migration to create the required claim_next_job, complete_job, and fail_job RPCs. Updates configuration, environment variables, and documentation to remove database connection details and reflect the new Supabase-based workflow. Cleans up dependencies and code related to psycopg2 and direct SQL usage.

--- a/workers/media/requirements.txt
+++ b/workers/media/requirements.txt
@@ -1,7 +1,6 @@
 # YouTube Production Assistant - Media Worker Dependencies
 
-# Database
-psycopg2-binary==2.9.9
+# Supabase API
 supabase==2.9.1
 
 # Video Processing (using ffmpeg directly via subprocess - moviepy not needed)
