Add external URL validation and security guard checks
Introduces a shared validateExternalUrl utility to block private/internal addresses and enforce allowed protocols/ports for all user-supplied image URLs. Applies this validation to thumbnail preset uploads, NanoBanana, pose analysis, and headshot pose handlers. Adds a GitHub Actions workflow and supporting script to enforce security guard checks. Removes agent log code from DataForSEO integration. Updates Next.js and related dependencies.

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "build": "npm run build --workspace=apps/web",
     "start": "npm run start --workspace=apps/web",
     "lint": "npm run lint --workspace=apps/web",
-    "db:migrate": "npm run db:migrate --workspace=apps/web"
+    "db:migrate": "npm run db:migrate --workspace=apps/web",
+    "security:check": "node scripts/security/check-guards.js"
   },
   "engines": {
     "node": ">=20.0.0"
